syntax = "proto3";

package upnp;

service Bridge {
    rpc Open(stream ClientRequest) returns (stream ServerResponse);
}

message ClientRequest {
    oneof req_oneof {
        MSearchRequest m_search = 1;
    }
}

message Endpoint {
    bytes ip = 1;
    uint32 port = 2;
}

message MSearchRequest {
    bytes payload = 1;
    Endpoint source = 2;
}

message ServerResponse {
    oneof resp_oneof {
        MSearchResponse m_search = 1;
        Notify notify = 2;
    }
}

message MSearchResponse {
    bytes payload = 1;
    Endpoint req_source = 2;
}

message Notify {
    bytes payload = 1;
}
